--- a/FitlifeAI-website/package.json
+++ b/FitlifeAI-website/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/stack": "^7.2.10",
     "axios": "^1.9.0",
     "expo": "~52.0.46",
     "expo-blur": "~14.0.3",
@@ -39,8 +40,9 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5"
   },
@@ -48,6 +50,7 @@
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
+    "@types/react-native-snap-carousel": "^3.8.11",
     "@types/react-test-renderer": "^18.3.0",
     "@types/tailwindcss": "^3.1.0",
     "jest": "^29.2.1",
