--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,29 @@
 venv/
 .env
 __pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.db
+*.sqlite3
+*.log
+*.egg-info/
+dist/
+build/
+*.egg
+*.whl
+*.coverage
+.coverage.*
+*.mypy_cache/
+*.pytest_cache/
+*.tox/
+*.ipynb_checkpoints/
+*.DS_Store
+*.vscode/
+.idea/
+*.swp
+*.swo
+*.bak
+*.tmp
+*.orig
+*.patch 
